--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-create-react-app-express",
+  "name": "Matlistan",
   "version": "1.0.0",
   "scripts": {
     "client": "cd client && npm run start",
@@ -9,7 +9,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.4.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
